#461 Velocity: Fix template bugs for migration

--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -19,10 +19,6 @@
 	min-height: 3em;
     .clearfix();
 
-	.userregistration & {
-		display: none;
-	}
-
     // Message Heading, Paragraph
 
     h3, p {
@@ -91,7 +87,7 @@
 	background-color: @message-color--error;
 
 	&:before {
-		content: '\f12a';
+		content: "\f12a";
 	}
 }
 
@@ -101,7 +97,7 @@
 	background-color: @message-color--warning;
 
 	&:before {
-		content: '\f071';
+		content: "\f071";
 	}
 }
 
@@ -111,7 +107,7 @@
 	background-color: @message-color--information;
 
 	&:before {
-		content: '\f129';
+		content: "\f129";
 	}
 }
 
@@ -121,7 +117,7 @@
 	background-color: @message-color--success;
 
 	&:before {
-		content: '\f00c';
+		content: "\f00c";
 	}
 }
 
@@ -131,7 +127,7 @@
 	background-color: @message-color--not-found;
 
 	&:before {
-		content: '\f002';
+		content: "\f002";
 	}
 }
 
@@ -234,10 +230,10 @@
     padding: 0.75em 1em 0.75em 46px !important;
 	background-color: lighten(@color__container--background, 10%) !important;
     border: 1px solid darken(@color__container--background, 10%);
-    color: @color__p--text!important;
 	
 	&, h3, p {
 		.paragraph;
+		color: inherit;
 	}
 	
 	h3, p {
