--- a/less/plugins/ecommerce/ecommerce-basket.less
+++ b/less/plugins/ecommerce/ecommerce-basket.less
@@ -39,7 +39,7 @@
 			// Background
 			
 			&:before {
-				content: '';
+				content: "";
 				z-index: -1;
 				display: block;
 				position: absolute;
@@ -59,7 +59,7 @@
 				padding: 0;
 				width: 1.5em;
 				color: @color__ecomproductslist-label--text;
-				content: '\f07a';
+				content: "\f07a";
     			line-height: 1em;
 				font-family: 'FontAwesome', sans-serif;
 				font-size: 1em;
