--- a/less/plugins/ecommerce/ecommerce-product.less
+++ b/less/plugins/ecommerce/ecommerce-product.less
@@ -254,7 +254,7 @@
 			&:before {
 				position: absolute;
 				margin-left: -2em;
-				content: '\2014';
+				content: "\2014";
 			}
 		}
 	}
@@ -349,19 +349,6 @@ a.ecomproduct__button {
 			margin: 0;
 			width: 100%;
 		}
-		
-		.ecomproduct__button {
-			margin-bottom: 1em;
-			text-align: center;
-			
-			@media @mobile {
-				width: 100%;
-			}
-		
-			&:before {
-				float: none;
-			}
-		}
     }
 }
 
@@ -387,34 +374,6 @@ a.ecomproduct__button {
             line-height: 1;
         }
     }
-
-	.ecom-product-cattag {
-		.ecom-product-tag,
-		.ecom-product-category {
-			display: flex;
-			flex-wrap: wrap;
-
-			&:after {
-				content: ':\00a0';
-				order: 0;
-				display: inline-block;
-			}
-		}
-
-		.store-category-link,
-		.ecom-product-tag-link {
-			font-weight: 300;
-			order: 1;
-
-			&:after {
-				content: ',\00a0';
-			}
-
-			&:last-child::after {
-				content: none;
-			}
-		}
-	}
 	
 	.product-tags {
 		border-top: 1px solid fade(@color__ecomproductslist-label--text, 20%);
