--- a/less/widgets/embeds.less
+++ b/less/widgets/embeds.less
@@ -34,19 +34,7 @@
 	}
 }
 
-// Embeds
-
-.widget.embed .embed-default,
-.widget .embed .embed-wrap {
-	background: transparent;
-	border: none;
-	padding: 0;
-	text-align: left;
-}
-
-.embed-content iframe {
-	max-width: 100%;
-}
+// Vimeo embed
 
 .embed-wrap--video iframe {
 	border: 0;
