--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -14,7 +14,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	.inline-block-font-hack();
-	margin: -4px;
+	margin: 0 -4px 4px;
 }
 
 // Single Gallery Item
