--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -83,9 +83,13 @@ a.twitter__account-link {
 // Content
 
 .tweet-content {
-	padding: 0 0.5em 4em;
+	padding: 0 0.5em;
     line-height: 1.5em;
 	letter-spacing: -0.025em;
+
+	.profile & {
+		font-family: @font__h3--font-family;
+	}
 	
 	&, a {
 		.heading--4;
@@ -95,24 +99,21 @@ a.twitter__account-link {
 	}
 	
 	&:before {
-		content: '\201c';
+		content: "\201c";
 	}
 	
 	&:after {
-		content: '\201d';
+		content: "\201d";
 	}
 }
 
 // Tweet Metadata
 
 .tweet-metadata {
-	position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-	padding: 1em 1.5em;
+	position: relative;
+	margin-top: 2em;
+	padding-top: 1.5em;
 	line-height: 1.4em !important;
-	border-top: 1px solid @color-text--light;
 
 	.style--light & {
         border-color: @color-text--light;
@@ -125,6 +126,14 @@ a.twitter__account-link {
     .style--dark & {
         border-color: fade(@contrast--dark, 75%);
     }
+	&:before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: -20px;
+		right: -20px;
+		border-top: 1px solid @color-text--light;
+	}
 	
 	// Twitter link at the end.
 	
