--- a/less/widgets/yelp-review.less
+++ b/less/widgets/yelp-review.less
@@ -56,6 +56,15 @@
 		.review-link {
 			.link;
 			padding: 0 !important;
+			font-size: @font__p--font-size;
+
+			.make-font-a-little-smaller(@font__p--font-size);
+			.make-font-smaller(@font__p--font-size);
+			.make-font-a-lot-smaller(@font__p--font-size);
+	
+			.make-line-height-a-little-smaller(@font__p--line-height);
+			.make-line-height-smaller(@font__p--line-height);
+			.make-line-height-a-lot-smaller(@font__p--line-height);
 		}
 	}
 
