--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -39,11 +39,7 @@ html, body {
 	padding: 0;
     background-color: @color__body--background;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-	font-smooth: antialiased;
-	-moz-font-smooth: antialiased;
-	-webkit-font-smooth: antialiased;
-	-moz-osx-font-smooth: grayscale;
-	text-rendering: geometricPrecision;
+	font-smooth: always;
     width: -webkit-calc(100% - 0px);
 }
 
@@ -53,7 +49,6 @@ html {
 }
 
 body {
-	position: relative;
 	margin-top: -1px;
 	padding-top: 1px;
 }
@@ -141,10 +136,6 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 			@media @mobile {
 				padding: 1em 2em;
 				text-align: center;
-			}
-
-			.edit & {
-				width: 90%;
 			}
 		}
 		
