--- a/less/plugins/plugins.less
+++ b/less/plugins/plugins.less
@@ -10,7 +10,6 @@
 	.paragraph;
 	color: inherit;
 	display: block;
-	vertical-align: middle;
 	font-weight: bold;
 	line-height: 1em;
 }
@@ -119,11 +118,11 @@ a.tag-link,
 		padding: 0.5em 1em;
 		
 		&.icon--previous:before {
-			content: '\f053';
+			content: "\f053";
 		}
 		
 		&.icon--next:after {
-			content: '\f054';
+			content: "\f054";
 		}
 		
 		&:before {
