--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -183,7 +183,7 @@ a.companyname {
 		&:before,
 		&:hover:after,
 		&:hover:before {
-			content: '';
+			content: "";
 			height: 3px;
 			width: 28px;
 			position: absolute;
@@ -346,10 +346,6 @@ a.companyname {
 		.make-font-a-little-smaller(@font__navigation--font-size);
 		.make-font-smaller(@font__navigation--font-size);
 		.make-font-a-lot-smaller(@font__navigation--font-size);
-	
-		.make-line-height-a-little-smaller(@font__navigation--line-height);
-		.make-line-height-smaller(@font__navigation--line-height);
-		.make-line-height-a-lot-smaller(@font__navigation--line-height);
 		
 		@media @tablet {
 			display: table;
@@ -359,7 +355,7 @@ a.companyname {
 		}
 		
 		&:after {
-			content: '';
+			content: "";
 			display: block;
 		}
 		
@@ -397,18 +393,19 @@ a.companyname {
 		padding-right: 2.25em;
 		
 		&:after {
-			content: '';
+			content: "";
 			position: absolute;
-			top: 50%;
-			right: 0.75em;
-			border: 0.2em solid @color__navigation--text;
-			transform: rotate(45deg);
-			margin-left: auto;
-			width: 0.6em;
-			height: 0.6em;
-			border-left: transparent;
-			border-top: transparent;
-			margin-top: -0.4em;
+			top: 0;
+			right: 0.25em;
+			bottom: 0;
+			margin-left: 0.25em;
+			width: 1.5em;
+			background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzMiAzMiI+PHBhdGggZmlsbD0ibm9uZSIgc3Ryb2tlPSIjMjYyODI5IiBzdHJva2UtbWl0ZXJsaW1pdD0iMTAiIHN0cm9rZS13aWR0aD0iMiIgZD0iTTkgMTMuMTVsNyA3IDctNyIvPjwvc3ZnPg==");
+			background-size: 1.5em;
+			background-position: 0 center;
+			background-repeat: no-repeat;
+			font-size: 1.2em;
+			text-align: right;
 			.transition(transform 0.25s ease-in-out);
 		}
 	}
@@ -454,6 +451,8 @@ a.companyname {
     	margin: 0.5em 0 0;
 		padding: 0;
 		width: auto;
+		min-width: 300px;
+		max-width: 400px;
 		height: auto;
 		background-color: @color__navigation-list--background;
 		border: 1px solid @color__navigation--border;
@@ -467,6 +466,8 @@ a.companyname {
 			margin: 0;
 			padding: 0;
 			height: 0;
+			min-width: auto;
+			max-width: none;
 			background-color: fade(@color__navigation-list--background, 75%);
 			border-color: fade(@color__navigation--border, 25%);
 			border-left: none;
@@ -501,7 +502,7 @@ a.companyname {
 	.transition(all 0.25s ease-in-out 0s);
 	
 	&:after {
-		content: ' ';
+		content: " ";
 		position: absolute;
 		bottom: 0;
 		left: 0.5em;
